# krrood

./: .gitignore  README.md  example_usage.py  pyproject.toml  pytest.ini  requirements-dev-ci.txt  requirements-dev.txt  requirements.txt
.github/workflows/: build_and_deploy_doc.yml  ci.yml  publish-to-test-pypi.yml  test_notebooks.yml
.junie/: guidelines.md
doc/: _config.yml  _toc.yml  eql  intro.md  requirements.txt
doc/diagrams/: krrood_overview.puml
doc/eql/: eql_for_sql_experts.md  example_with_and_or.md  example_with_cached_symbols.md  example_with_concatenate.md  example_with_flatten.md  example_with_for_all.md  example_with_indexing.md  example_with_joining_multiple_sources.md  example_with_nested_queries.md  example_with_not.md  example_with_predicate.md  example_with_predicate_style_query.md  example_with_rule_inference.md  example_with_rule_tree.md  example_with_the.md  intro.md
doc/ormatic/: alternative_mapping.md  alternative_mapping.rst  eql_for_ormatic.md  eql_for_ormatic.rst  example.md  example.rst  interface_usage.rst  intro.md  intro.rst  json.rst  orm_generation.rst  tips_and_tricks.rst  troubleshooting.md  troubleshooting.rst
examples/eql/: cache.md  comparators.md  domain_mapping.md  ease_9_25_presentation.py  eql_for_sql_experts.md  example_wit_nested_queries.py  example_with_and_or.py  example_with_cached_symbols.py  example_with_concatenate.py  example_with_flatten.py  example_with_for_all.py  example_with_indexing.py  example_with_joining_multiple_sources.py  example_with_not.md  example_with_not.py  example_with_predicate.md  example_with_predicate.py  example_with_predicate_style.py  example_with_predicate_style_rule.py  example_with_rule_inference.md  example_with_rule_inference.py  example_with_rule_tree.py  example_with_the.md  example_with_the.py  intro.md  intro_example.py  logical_operators.md  match.md  predicate_and_symbolic_function.md  result_quantifiers.md  tree  writing_queries.md  writing_rule_trees.md
examples/eql/old_examples/: example_with_concatenate.md  example_with_exists_and_for_all.md  example_with_flatten.md  example_with_for_all.md
examples/sparqlwrapper/: sparqlwrapper_script.py
resources/: lubm.owl  lubm_instances.owl
scripts/: build_documentation.sh  evaluate_performance_eql.py  evaluate_performance_krrood.py  evaluate_performance_owlready.py  evaluate_performance_sparql.py  evaluate_performance_sparqlwrapper.py  generate_orm.py  generate_orm_lubm.py  test_documentation.sh
src/entity_query_language/: __init__.py  _patch_notes.txt  _tmp_patch_note.txt  cache_data.py  conclusion.py  conclusion_selector.py  entity.py  enums.py  property_descriptor.py  rule.py  rxnode.py  symbolic.py
src/krrood/: __init__.py  jinja_template.j2  lubm_eql_queries.py  lubm_sparql_queries.py  owl_instances_loader.py  owl_to_python.py  singleton.py  utils.py
test/: conftest.py  test_docstrings_from_owl.py  test_enum_functionality.py  test_generated_lubm_pd_types.py  test_generator.py  test_generator_simple.py  test_lubm.py  test_missing_datatype_properties_and_object_any.py  test_predefined_data_types.py  test_property_descriptor_queries.py  test_restriction_specialization.py  test_sparql_and_eql.py
test/dataset/: cyclic_imports.py  dataset_extension.py  example_classes.py  ormatic_interface.py  semantic_world_like_classes.py  sqlalchemy_interface.py  university_ontology_like_classes.py
test/test_class_diagram/: test_class_diagram.py  test_cyclic_imports.py  test_wrapped_field.py
test/test_eql/: conftest.py  datasets.py  test_aggregations.py  test_cache_fastpaths.py  test_compiler_codegen.py  test_descriptor_aware_introspector.py  test_hashed_value_interning.py  test_indexing.py  test_predicate_inverse.py  test_property_descriptor.py  test_property_descriptor_queries.py  test_queries.py  test_rendering.py  test_rules.py  test_symbol_graph.py  test_utils.py  test_utils_generate_bindings.py
test/test_lubm/: test_compiler.py  test_generated_lubm_pd_types.py  test_generator.py  test_generator_simple.py  test_load_owl_instances.py  test_lubm.py  test_missing_datatype_properties_and_object_any.py  test_owl_instance_loader.py  test_predefined_data_types.py  test_property_descriptor_queries.py  test_restriction_specialization.py  test_sparql_and_eql.py
test/test_ormatic/: integration.py  test_cyclic_imports.py  test_eql.py  test_extension.py  test_field_info.py  test_generation.py  test_has_generic.py  test_interface.py  test_repr.py  test_symbol_graph_persistence.py
test/test_utils/: test_json_serializer.py
test/teste_symbolic_math/: test_casadi_wrapper.py
(+80 files in other folders)
